package com.mgriffin.order;

public interface OrderServiceFactory {

    OrderService createOrderService ();

}
