@startuml

Note "Creator" as N1
Note "ConcreteCreators" as N2
Note "Product" as N3
Note "ConcreteProduct" as N4

interface OrderServiceFactory {
    createOrderService():OrderService
}

class SingleMachineOrderServiceFactory
class MultiMachineOrderServiceFactory

SingleMachineOrderServiceFactory ..|> OrderServiceFactory
MultiMachineOrderServiceFactory ..|> OrderServiceFactory

interface OrderService
class OrderServiceImpl

OrderServiceImpl ..|> OrderService

MultiMachineOrderServiceFactory --> OrderServiceImpl
SingleMachineOrderServiceFactory --> OrderServiceImpl

OrderServiceFactory -- N1

MultiMachineOrderServiceFactory -- N2
SingleMachineOrderServiceFactory -- N2
OrderService -- N3
OrderServiceImpl -- N4

@enduml